# governance-program

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
clients/js/: README.md  package.json
clients/js/test/: increment.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs  pdas.rs
clients/rust/tests/: create.rs
program/: Cargo.toml  idl.json
program/proptest-regressions/: processor.txt
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: begin_voting.rs  cancel_proposal.rs  create_proposal.rs  delete_proposal.rs  delete_vote.rs  finalize_proposal.rs  finish_voting.rs  initialize_author.rs  initialize_governance.rs  insert_instruction.rs  process_instruction.rs  process_proposal.rs  push_instruction.rs  remove_instruction.rs  setup.rs  switch_vote.rs  transfer_from_treasury.rs  update_governance.rs  vote.rs
scripts/: generate-clients.mjs
scripts/client/: lint-rust.mjs
scripts/program/: lint.mjs
