[package]
name = "paladin-governance-program"
version = "0.0.1"
description = "Paladin Governance Program"
readme = "../README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
bytemuck = { version = "1.16.1", features = ["derive"] }
num_enum = "0.7.2"
paladin-stake-program = { git = "https://github.com/paladin-bladesmith/stake-program.git" }
shank = "0.4.2"
solana-program = "2.0.2"
spl-discriminator = "0.3.0"
spl-program-error = "0.5.0"

[dev-dependencies]
proptest = "1.5.0"
solana-program-test = "2.0.2"
solana-sdk = "2.0.2"
test-case = "3.3.1"

[features]
bpf-entrypoint = []
test-sbf = []

[package.metadata.solana]
program-id = "8vDzKeincu9R9u6Yzuh7TQ5VqPXCcZtfYh6mh82XscQj"
