[package]
name = "paladin-governance-program"
version = "0.0.1"
description = "Paladin Governance Program"
readme = "../README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
bytemuck = { version = "1.16.1", features = ["derive"] }
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.7.2"
paladin-stake-program = { git = "https://github.com/paladin-bladesmith/stake-program.git" }
shank = "0.4.2"
solana-program = "2.0"
spl-discriminator = "0.3.0"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.5.0"
solana-program-test = "2.0"
solana-sdk = "2.0"
test-case = "3.3.1"

[features]
bpf-entrypoint = []
test-sbf = []

[package.metadata.solana]
program-id = "C1iuSykZ3SbTPmzZy66L57yQm6xnAtVdqEgYw2V39ptJ"
