[package]
name = "paladin-governance-program"
version = "0.0.1"
description = "Paladin Governance Program"
readme = "../README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
arrayref = "0.3.9"
borsh = { version = "1.5.1", features = ["derive"] }
bytemuck = { version = "1.16.1", features = ["derive"] }
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.7.2"
paladin-stake-program = { git = "https://github.com/paladin-bladesmith/stake-program.git", branch = "main"}
shank = "0.4.2"
solana-program = "2.1"
spl-discriminator = "0.3.0"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.5.0"
solana-program-test = "2.1"
solana-sdk = "2.1"
test-case = "3.3.1"

[features]
bpf-entrypoint = []
test-sbf = []

[package.metadata.solana]
program-id = "8WAFLJeTHWK9a4tZYonvVRJPVFWRnDpejSrabNYR1QGf"
